<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSend"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/enviar_archivo"
        android:enabled="false"
        android:text="@string/enviar"
        android:textColor="@color/white"
        app:backgroundTint="#736E6E"
        app:icon="@android:drawable/stat_sys_upload_done"
        app:iconSize="33dp"
        app:iconTint="@color/material_dynamic_neutral_variant0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/txvInstruc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/firme_en_el_recuadro_y_luego_pulse_el_bot_n_inferior"
        android:textAlignment="center"
        android:textColor="#A5A0A0"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0" />

    <com.mihir.drawingcanvas.drawingView
        android:id="@+id/drawing_view"
        android:layout_width="fill_parent"
        android:backgroundTint="#ffff"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#1a304f"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:enabled="false"
        android:id="@+id/btnCls"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/borrar"
        app:icon="@android:drawable/ic_popup_sync"
        app:iconTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/drawing_view"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:tint="@android:color/holo_red_dark"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="400dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="448dp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:enabled="false"
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/material_dynamic_neutral_variant0"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/drawing_view"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <Button
            android:enabled="false"
            android:id="@+id/btnUn"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/deshacer"
            android:rotationY="180"
            app:icon="@android:drawable/ic_menu_rotate"
            app:iconTint="#ffff"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.833"
            tools:ignore="MissingConstraints" />

        <Button
            android:enabled="false"
            android:id="@+id/btnRed"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rehacer"
            app:icon="@android:drawable/ic_menu_rotate"
            app:iconTint="#ffff"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/btnUn"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.833"
            tools:ignore="ExtraText,MissingConstraints" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/txtCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A5A0A0"
        android:text="@string/firmas_faltantes"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvInstruc" />


</androidx.constraintlayout.widget.ConstraintLayout>